# pixels-client

pixels-canvas/: Cargo.toml
pixels-canvas/src/: client.rs  elem.rs  error.rs  layer.rs  lib.rs
pixels-interface/: Cargo.toml
pixels-interface/src/: canvas.rs  file_dialog.rs  input.rs  main.rs  panel.rs  state.rs
pixels-util/: Cargo.toml
pixels-util/src/: color.rs  lib.rs  pixels.rs
