[package]
name = "pixels-interface"
version = "0.1.5"
edition = "2021"

[dependencies]
pixels-canvas = { path = "../pixels-canvas" }
pixels-util = { path = "../pixels-util" }

clap = { version = "4.1.8", features = ["derive"] }
egui-macroquad = "0.15.0"
egui_extras = { version = "0.21.0", features = ["image"] }
macroquad = "0.3.25"
bevy_time = "0.10.0"
bevy_ecs = "0.10.0"

[target.'cfg(not(macos))'.dependencies]
rfd = "0.11.2"

[target.'cfg(macos)'.dependencies]
egui_file = "0.8.0"




